Updated Server tab for release

--- a/src/components/MainNav/Toolbar/LeftButton/LeftButton.scss
+++ b/src/components/MainNav/Toolbar/LeftButton/LeftButton.scss
@@ -47,8 +47,8 @@
   display: none;
 }
 
-.l-menu.server-icon {
-  button, span.add {
+.servers-list .l-menu.server-icon {
+  a, span.add {
     background: #55c9c0;
   }
 }
