--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -31,6 +31,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 0 5px;
         width: 100%;
         height: 100%;
         text-decoration: none;
@@ -66,10 +67,19 @@
     div {
       width: 7rem;
       height: 100%;
-      padding: 0 5px;
 
       &:hover {
         background: #f79b44;
+      }
+    }
+
+    div.logo {
+      img {
+        width: 90%;
+      }
+
+      &:hover {
+        background: transparent;
       }
     }
 
