--- a/src/components/Server/Server.scss
+++ b/src/components/Server/Server.scss
@@ -1,19 +1,34 @@
-.statistics-list.servers .list-item .star {
+.servers-list .list-item .star {
   display: none;
 }
 
-.statistics-list.servers .r-col .stats .c-2 {
+.servers-list .r-col .stats .c-2 {
   padding: 0;
 }
 
-.list-item .r-col .stats .c-3 {
+.servers-wrapper .list-item .r-col .stats .c-3 {
   padding: 0;
+
+  span.stat {
+    margin-left: 0;
+  }
 }
 
-.statistics-list.servers .r-col {
+.servers-wrapper .r-col {
   padding-left: 2rem;
 
-   .name {
-    font-size: 25px;
+  .server-name {
+    color: black;
+    font-size: 28px;
+  }
+}
+
+.servers-wrapper .list-item .r-col {
+  .c-3 > div > span {
+    transform: translateX(-10px);
+  }
+
+  .stats div>span {
+    width: 100%;
   }
 }
