Added Notifications functionality

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -59,6 +59,10 @@ button:active, a:active, .period:active {
   color: #55C9C0;
 }
 
+.list-item:first-child {
+  margin-top: 5px;
+}
+
 .list-item .text-status {
   display: none;
 }
