--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -63,6 +63,10 @@ button:active, a:active, .period:active {
   margin-top: 5px;
 }
 
+.servers-wrapper .list-item:first-child {
+  margin-top: 0;
+}
+
 .list-item .text-status {
   display: none;
 }
