--- a/src/components/RRD/Timer/Timer.scss
+++ b/src/components/RRD/Timer/Timer.scss
@@ -19,6 +19,12 @@
     width: 30px;
     height: 30px;
 
+    span.seconds {
+      &:hover, &:active {
+        background: unset;
+      }
+    }
+
     svg {
       height: 30px;
       width: 30px;
@@ -32,7 +38,7 @@
         transform-box: fill-box;
         transform-origin: center;
         transform: rotate(270deg);
-        transition: all 1s ease-in-out;
+        transition: all 1s linear;
       }
     }
   }
