Implemented bulk action for Users tab. Updated styles

--- a/src/components/User/User.scss
+++ b/src/components/User/User.scss
@@ -154,7 +154,7 @@ span.stat.email{
     text-transform: uppercase;
     height: 38px;
 
-    a {
+    a, button {
       display: flex;
       justify-content: center;
       align-items: center;
