--- a/src/components/Server/ServerSys.scss
+++ b/src/components/Server/ServerSys.scss
@@ -25,7 +25,8 @@
     }
   }
 
-  .actions a.link-gray.restart svg {
+  .actions a.link-gray.restart svg,
+  .actions button.link-gray.restart svg {
     width: 1rem;
     height: 1rem;
   }
