Implemented search funcionality for the whole application. Updated styles.

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -80,3 +80,9 @@ button:active, a:active, .period:active {
 .list-item .text-status {
   display: none;
 }
+
+button {
+  &:hover, &:active, &:focus {
+    outline: none;
+  }
+}
