--- a/src/containers/ControlPanelContent/ControlPanelContent.scss
+++ b/src/containers/ControlPanelContent/ControlPanelContent.scss
@@ -28,3 +28,40 @@
     padding-top: 5%;
   }
 }
+
+.scroll-to-top {
+  position: fixed;
+  right: 15;
+  bottom: 15;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 50%;
+  background: #c3c3c3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:hover {
+    background: #55c9c0;
+  }
+
+  &:active {
+    background: #51beb5;
+  }
+
+  button {
+    background: none;
+    border: none;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    transform: scale(1.32);
+
+    svg {
+      color: white;
+      height: 70%;
+    }
+  }
+}
