--- a/src/components/MainNav/Stat-menu/Menu.scss
+++ b/src/components/MainNav/Stat-menu/Menu.scss
@@ -50,12 +50,19 @@
     }
 
     .stat {
-      a {
-        display: block;
+      a, button {
+        display: flex;
+        flex-direction: column;
         width: 100%;
         height: 100%;
         color: black;
         text-decoration: none;
+        text-align: left;
+      }
+
+      button {
+        background: none;
+        border: none;
       }
 
       h3 {
@@ -73,6 +80,14 @@
 
         .stats {
           overflow: hidden;
+        }
+      }
+
+      &:active {
+        border-color: #f72b44;
+
+        h3 {
+          color: #f72b44;
         }
       }
 
@@ -94,6 +109,14 @@
         color: #ff6701;
         font-size: 18px;
         margin-bottom: 25px;
+      }
+    }
+
+    .stat.focus {
+      border-bottom: 3px solid #5edad0 !important;
+      
+      a, h3 {
+        color: #36B3A9 !important;
       }
     }
   }
