--- a/src/containers/ControlPanelContent/ControlPanelContent.scss
+++ b/src/containers/ControlPanelContent/ControlPanelContent.scss
@@ -29,39 +29,69 @@
   }
 }
 
-.scroll-to-top {
+.fixed-buttons {
   position: fixed;
   right: 15;
   bottom: 15;
-  width: 40px;
-  height: 40px;
-  padding: 5px;
-  margin: 5px;
-  border-radius: 50%;
-  background: #c3c3c3;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 
-  &:hover {
-    background: #55c9c0;
-  }
-
-  &:active {
-    background: #51beb5;
-  }
-
-  button {
-    background: none;
-    border: none;
-    width: 100%;
-    height: 100%;
+  > div {
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    margin: 5px;
     border-radius: 50%;
-    transform: scale(1.32);
+    background: #c3c3c3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    &:hover {
+      background: #55c9c0;
+    }
+  
+    &:active {
+      background: #51beb5;
+    }
+  
+    button {
+      background: none;
+      border: none;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      transform: scale(1.32);
+  
+      svg {
+        color: white;
+        height: 70%;
+      }
+    }
+  }
 
-    svg {
-      color: white;
-      height: 70%;
+  > div:first-child {
+    background: none;
+
+    &:hover {
+      background: #55c9c0;
+
+      button svg {
+        color: white;
+      }
+    }
+
+    &:active {
+      background: #51beb5;
+    }
+
+    button {
+      padding: 0;
+
+      svg {
+        color: #c3c3c3;
+      }
     }
   }
 }
