--- a/src/components/ControlPanel/ListItem/ListItem.scss
+++ b/src/components/ControlPanel/ListItem/ListItem.scss
@@ -82,6 +82,17 @@
   }
 }
 
+.list-item.suspended.toggled {
+  background: #f2eab8;
+  color: #b2ac87;
+
+  .l-col,
+  .r-col .name,
+  .r-col .stats {
+    color: #b2ac87 !important;
+  }
+}
+
 .list-item.outdated {
   background: #ffcaca;
   border-left: 5px solid #ff6f6f;
