--- a/src/components/RRD/RRD.scss
+++ b/src/components/RRD/RRD.scss
@@ -29,3 +29,15 @@
     }
   }
 }
+
+.rrd-item.focused {
+  border-left: 2px solid #5edad0;
+
+  .l-col {
+    padding-left: 11px;
+  }
+
+  div.actions {
+    opacity: 1;
+  }
+}
