--- a/src/containers/Statistics/Statistics.scss
+++ b/src/containers/Statistics/Statistics.scss
@@ -20,3 +20,12 @@
   font-size: 12px;
   color: #929292;
 }
+
+.statistic-item.focused {
+  border-left: 2px solid #5edad0;
+  transform: translateX(-2px);
+
+  .r-col .date {
+    color: #5edad0;
+  }
+}
