--- a/src/containers/ControlPanelContent/ControlPanelContent.scss
+++ b/src/containers/ControlPanelContent/ControlPanelContent.scss
@@ -31,8 +31,8 @@
 
 .fixed-buttons {
   position: fixed;
-  right: 15;
-  bottom: 15;
+  right: 15px;
+  bottom: 15px;
   display: flex;
   justify-content: space-around;
   align-items: center;
