Updated Backup creation button

--- a/src/components/MainNav/Toolbar/LeftButton/LeftButton.scss
+++ b/src/components/MainNav/Toolbar/LeftButton/LeftButton.scss
@@ -1,7 +1,7 @@
 .l-menu {
   transform: translate(35px, 50%);
 
-  a {
+  a, button {
     display: flex;
     justify-content: center;
     align-items: center;
