--- a/src/components/CronJob/Add/AddCronJob.scss
+++ b/src/components/CronJob/Add/AddCronJob.scss
@@ -21,7 +21,7 @@
 
       .body-col-2 {
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
         align-items: flex-start;
         padding: 1.7rem 1rem;
         width: 70%;
