--- a/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
+++ b/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
@@ -180,6 +180,28 @@ $successColor: $addButtonBackground;
       font-weight: bold;
     }
     
+    label.label-wrapper {
+      display: flex;
+      align-items: flex-end;
+      width: fit-content;
+
+      span {
+        font-weight: normal;
+        text-transform: uppercase;
+        margin-left: 5px;
+        font-size: 12px;
+      }
+    }
+
+    .checkbox-wrapper {
+      display: flex;
+      align-items: center;
+
+      label {
+        margin: 0 12px;
+      }
+    }
+
     input {
       color: $textColor;
     }
