--- a/src/components/Server/Edit/Httpd/EditHttpd.scss
+++ b/src/components/Server/Edit/Httpd/EditHttpd.scss
@@ -1,13 +1,21 @@
-.content .edit-template.edit-php {
+.content .edit-template.edit-httpd {
   .toolbar {
     .search-toolbar-name {
       width: fit-content;
-      color: rgb(119, 119, 119);
+
+      a {
+        color: #ff6701;
+        text-decoration: none;
+
+        &:hover {
+          color: rgb(119, 119, 119);
+        }
+      }
     }
-    
-    .search-toolbar-name,
+
     .link {
       width: fit-content;
+      margin-left: 15px;
 
       a {
         text-decoration: none;
@@ -18,18 +26,6 @@
 
         &:hover {
           color: #ff6701;
-        }
-      }
-    }
-
-    .link {
-      margin-left: 15px;
-
-      a {
-        color: #ff6701;
-
-        &:hover {
-          color: rgb(119, 119, 119);
         }
       }
     }
