--- a/src/components/Backup/Backup.scss
+++ b/src/components/Backup/Backup.scss
@@ -1,3 +1,7 @@
 .backups-wrapper .list-item .c-1 div > span {
   padding-left: 15px;
 }
+
+.backups-restore-details .list-item .star {
+  display: none;
+}
