Implemented user sign in

--- a/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
+++ b/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
@@ -70,7 +70,8 @@ $successColor: $addButtonBackground;
   display: flex;
 }
 
-.edit-item {
+.edit-item,
+.login-layout {
   display: flex;
   font-size: 15px;
   margin-top: 3rem;
