--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -147,8 +147,10 @@
       }
     }
 
-    div + div + div a {
+    div + div + div a,
+    div + div + div button {
       color: white;
+      cursor: pointer;
       font-weight: 100;
 
       &:hover {
