--- a/src/components/Backup/RestoreSettings/BackupRestoreSettings.scss
+++ b/src/components/Backup/RestoreSettings/BackupRestoreSettings.scss
@@ -1,4 +1,12 @@
 .backups-restore-settings {
+  .toolbar {
+    .backup-details-icon {
+      svg {
+        transform: translateX(2px);
+      }
+    }
+  }
+
   .mail-accounts-wrapper {
     .list-item {
       .l-col {
