(15) Added forgot password view with stepper. Integrated backend endpoints and fixed minor bugs.

--- a/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
+++ b/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
@@ -82,7 +82,8 @@ $successColor: $addButtonBackground;
   }
 
   form {
-    button {
+    button,
+    a {
       color:#2C9491;
       font-weight: bold;
     
