--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -56,6 +56,7 @@
           font-size: 11px;
           text-transform: uppercase;
           letter-spacing: .75px;
+          text-decoration: none;
         }
 
         button[type="submit"] {
