--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -5,6 +5,9 @@
 
   .logo {
     padding-left: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     img {
       width: 80%;
