--- a/src/components/CronJob/Generator/Generator.scss
+++ b/src/components/CronJob/Generator/Generator.scss
@@ -1,3 +1,12 @@
+$whiteBackground: #ececec;
+$primary: #2c54ac;
+$primaryLight: #2955a7;
+$primaryActive: #2c5cb4;
+$secondary: #fcac04;
+$secondaryLight: #f8b014;
+$secondaryActive: #fdb51c;
+$textColor: #555;
+
 .cron-job-generator {
   border: 1px solid #d9d9d9;
   padding: 1rem 1.5rem;
@@ -17,16 +26,16 @@
       text-decoration: none;
 
       &:hover {
-        color: #ff6701;
+        color: $secondaryLight;
       }
 
       &:active {
-        color: #55C9C0;
+        color: $primaryActive;
       }
     }
 
     a.active {
-      color: #ff6701;
+      color: $secondaryActive;
     }
   }
 
@@ -65,7 +74,7 @@
         &:focus,
         &:active {
           outline: none;
-          border-color: #55C9C0;
+          border-color: $primaryActive;
           box-shadow: unset;
         }
       }
@@ -78,7 +87,7 @@
 
       .form-actions {    
         button {
-          background: #55C9C0;
+          background: $primary;
           color: white;
           border-radius: 3px;
           padding: .35rem 1.1rem;
@@ -86,12 +95,12 @@
     
           &:hover {
             color: #555;
-            background: #5BD8CF;
+            background: $primary;
           }
     
           &:active {
             color: white;
-            background: #D1D70D;
+            background: $primaryActive;
           }
         }
       }
