--- a/src/components/Server/Edit/EditServer.scss
+++ b/src/components/Server/Edit/EditServer.scss
@@ -1,3 +1,12 @@
+$whiteBackground: #ececec;
+$primary: #2c54ac;
+$primaryLight: #2955a7;
+$primaryActive: #2c5cb4;
+$secondary: #fcac04;
+$secondaryLight: #f8b014;
+$secondaryActive: #fdb51c;
+$textColor: #555;
+
 .edit-server {
   .modules {
     display: flex;
@@ -22,12 +31,12 @@
     .form-group {
       a {
         text-decoration: none;
-        color: #2C9491;
+        color: $primary;
         font-weight: bold;
         font-size: 14px;
 
         &:hover {
-          color: #ff6701;
+          color: $primaryLight;
         }
       }
     }
@@ -92,7 +101,7 @@
       .sftp-module,
       .fm-module {
         font-size: 15px;
-        color: #555;
+        color: $textColor;
       }
 
       .buy-license {
@@ -101,7 +110,7 @@
 
         a {
           color: #FFF;
-          background: #9fbf0c;
+          background: $primary;
           border: none;
           border-radius: 3px;
           font-size: 13px;
@@ -113,8 +122,8 @@
           margin-right: 10px;
 
           &:hover {
-            color: #555;
-            background: #c0e60f;
+            color: white;
+            background: $primary;
           }
         }
 
@@ -132,7 +141,7 @@
         margin: 1rem 0;
 
         > span {
-          color: #2c9491;
+          color: $primary;
         }
 
         .form-group {
