--- a/src/containers/RRDs/RRDs.scss
+++ b/src/containers/RRDs/RRDs.scss
@@ -1,9 +1,18 @@
+$whiteBackground: #ececec;
+$primary: #2c54ac;
+$primaryLight: #2955a7;
+$primaryActive: #2c5cb4;
+$secondary: #fcac04;
+$secondaryLight: #f8b014;
+$secondaryActive: #fdb51c;
+$textColor: #555;
+
 div.content {
   margin-top: 0;
 }
 
 .rrd-list {
-  color: #686868;
+  color: $textColor;
 
   .toolbar {
     padding-bottom: 10px;
@@ -49,11 +58,11 @@ div.content {
     font-size: 14px;
 
     &:hover {
-      color: #ff6701;
+      color: $secondaryLight;
     }
 
     &:active {
-      color: #55C9C0;
+      color: $primaryActive;
     }
   }
 
@@ -61,11 +70,11 @@ div.content {
     > button svg {
 
       &:hover {
-        color: #ff6701;
+        color: $secondaryLight;
       }
 
       &:active {
-        color: #55C9C0;
+        color: $primaryActive;
       }
     }
 
@@ -75,6 +84,6 @@ div.content {
   }
 
   > div.active {
-    color: #ff6701;
+    color: $secondaryActive;
   }
 }
