--- a/src/components/TopPanel/TopPanel.scss
+++ b/src/components/TopPanel/TopPanel.scss
@@ -1,11 +1,17 @@
+$whiteBackground: #ececec;
+$primary: #2c54ac;
+$primaryLight: #2955a7;
+$primaryActive: #2c5cb4;
+$secondary: #fcac04;
+$secondaryLight: #f8b014;
+$secondaryActive: #fdb51c;
+$textColor: #555;
+
 .panel-wrapper {
   .logo-img {
-    background-image: url("/images/sprite.png?1446554103");
-    background-position: -117px -57px;
-    background-repeat: no-repeat;
-    height: 22px;
-    width: 70px;
-    margin-left: -2px;
+    img {
+      width: 82%;
+    }
 
     &:hover {
       background-color: transparent;
@@ -31,21 +37,21 @@
   .profile-menu {
     > div:nth-child(1) a {
       &:hover {
-        color: #ffd62e;
+        color: $secondaryLight;
       }
 
       &:active {
-        color: #f79b44;
+        color: $secondaryActive;
       }
     }
 
     > div:nth-child(2) a {
       &:hover {
-        color: #C0E60E;
+        color: $primaryLight;
       }
 
       &:active {
-        color: #ffd62e;
+        color: $secondaryActive;
       }
     }
 
@@ -54,11 +60,11 @@
       font-weight: 700;
     
       &:hover {
-        color: #ffd62e;
+        color: $secondaryLight;
       }
 
       &:active {
-        color: #f79b44;
+        color: $secondaryActive;
       }
     }
 
@@ -68,11 +74,11 @@
       font-weight: 100;
 
       &:hover {
-        color: #C0E60E;
+        color: $primaryLight;
       }
 
       &:active {
-        color: #ffd62e;
+        color: $secondaryActive;
       }
     }
   }
