--- a/src/components/User/User.scss
+++ b/src/components/User/User.scss
@@ -1,3 +1,12 @@
+$whiteBackground: #ececec;
+$primary: #2c54ac;
+$primaryLight: #2955a7;
+$primaryActive: #2c5cb4;
+$secondary: #fcac04;
+$secondaryLight: #f8b014;
+$secondaryActive: #fdb51c;
+$textColor: #555;
+
 .checkbox {
   margin-bottom: 10px;
 }
@@ -19,8 +28,8 @@
     border-radius: 50%;
 
     &:hover {
-      background: #bfbfbf;
-      color: #ff6701;
+      background: #b4b4b478;
+      color: $secondaryLight;
     }
   }
 }
@@ -178,7 +187,7 @@ span.stat.email{
   }
 
   > div:nth-child(2) a:hover {
-    background: #9fbf0c;
+    background: $primaryLight;
   }
 
   > div:nth-child(4) a:hover {
@@ -191,5 +200,5 @@ span.stat.email{
 }
 
 .list-item.focused .r-col .name {
-  color: #36b3a9;
+  color: $secondary;
 }
