--- a/src/components/WebDomain/Edit/SslSupport/SslSupport.scss
+++ b/src/components/WebDomain/Edit/SslSupport/SslSupport.scss
@@ -1,3 +1,12 @@
+$whiteBackground: #ececec;
+$primary: #2c54ac;
+$primaryLight: #2955a7;
+$primaryActive: #2c5cb4;
+$secondary: #fcac04;
+$secondaryLight: #f8b014;
+$secondaryActive: #fdb51c;
+$textColor: #555;
+
 .edit-web {
   .ssl-support {
     .additional-info {
@@ -18,11 +27,11 @@
     a.generate-csr {
       text-transform: initial;
       text-decoration: none;
-      color: #2C9491;
+      color: $primary;
       font-weight: bold;
 
       &:hover {
-        color: #ff6701;
+        color: $secondaryLight;
       }
     }
   }
