--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,3 +1,6 @@
+$primaryLight: #2955a7;
+$primaryActive: #2c5cb4;
+
 .App {
   font-size: 25px;
   font-family: Arial;
@@ -38,12 +41,12 @@
   div {
     a.link-download:hover, button.link-download:hover,
     a.link-edit:hover, button.link-edit:hover {
-      background: #9fbf0c !important;
+      background: $primaryLight !important;
     }
     
     a.link-list:hover,
     button.link-list:hover {
-      background: #55c9c0 !important;
+      background: $primaryLight !important;
     }
     
     a.link-delete:hover,
@@ -66,7 +69,7 @@
 }
 
 button:active, a:active, .period:active {
-  color: #55C9C0;
+  color: $primaryActive;
 }
 
 .list-item:first-child {
