--- a/src/containers/DNSRecords/DNSRecords.scss
+++ b/src/containers/DNSRecords/DNSRecords.scss
@@ -1,6 +1,8 @@
+$secondary: #fcac04;
+
 .dns-records {
   div.subtitle {
-    color: #ff6701;
+    color: $secondary;
     font-size: 12px;
     margin: 30px 0 18px 14.3%;
     text-transform: uppercase;
