--- a/src/containers/MailAccounts/MailAccounts.scss
+++ b/src/containers/MailAccounts/MailAccounts.scss
@@ -1,8 +1,8 @@
-$secondary: #fcac04;
+$primary: #2c54ac;
 
 .mail-accounts {
   div.subtitle {
-    color: $secondary;
+    color: $primary;
     font-size: 12px;
     margin: 30px 0 18px 14.3%;
     text-transform: uppercase;
