--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -18,7 +18,7 @@ $textColor: #555;
   width: 100%;
   text-align: center;
   color: white;
-  background: #111;
+  background: #222e44;
   height: 34px;
   align-items: center;
   padding: 0 13%;
@@ -118,8 +118,8 @@ $textColor: #555;
 
     .top-link.focus {
       a, button {
-        color: $primary;
-        text-decoration: underline;
+        color: $secondaryActive;
+        // text-decoration: underline;
       }
     }
   }
@@ -147,7 +147,7 @@ $textColor: #555;
         }
 
         &:hover {
-          background: $secondaryLight;
+          background: #795222;
         }
       }
     }
